@@ -1,8 +1,10 @@
 --------------------------
 Changes in 1.8.6
+- COBJMeshFilerLoder: fix buffer overruns when loading empty face lines. Thanks @sfan5 fore report and patch.
+  Patch (commit 80e1609 to Minetest): https://github.com/minetest/irrlicht/commit/80e160935d3c2677344b0968c2690f63083a98dd (partially applied)
 - CObjMeshFileLoader: Backport fixes from trunk to avoid unnecessary memory allocations (speedup)
 - CObjMeshFileLoader: Backport fixes from trunk to avoid some buffer overruns
-- CImageLoaderBMP: Fix handling 4 bit RLE encoding. Thanks @sfan5 finding first bug and reporting (turned out there were quite a few more, this never worked much)
+- CImageLoaderBMP: Fix handling 4 bit RLE encoding. Thanks @sfan5 finding first bug and reporting (had some more)
 - CImageLoaderBMP: add bound checks to RLE decompression. Thanks @sfan5 for report and patch
   Patch (commit 4506d23 to Minetest): https://github.com/minetest/irrlicht/commit/4506d23dc3fa48332b5ca6c05633aebdbac673be
 - CImageLoaderBMP: check bitmap data against required size. Thanks @sfan5 for report and patch 
